--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "eslint-plugin-react-hooks": "^2.1.2"
   },
   "dependencies": {
-    "@forge/ui": "^1.1.0",
     "@forge/api": "2.6.1",
-    "@forge/resolver": "^1.3.5"
+    "@forge/events": "^0.6.1",
+    "@forge/resolver": "^1.3.5",
+    "@forge/ui": "^1.1.0"
   }
 }
