--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@
 /dist/
 /.vscode/
 .idea
+.eslintrc bad attempt.yml
+.eslintrc_original.yml
+.eslintrc.yml
+package-lock-backup.json
+tsconfig original.json
